--- a/swiper/style.scss
+++ b/swiper/style.scss
@@ -1,3 +1,7 @@
+@import "../node_modules/swiper/swiper-bundle.css";
+// @import "../../swiper/css/navigation";
+// @import "../../swiper/css/pagination";
+
 
 html,
 body {
