--- a/loading1/style.scss
+++ b/loading1/style.scss
@@ -29,7 +29,7 @@
 
 @keyframes loading {
     from {
-        transforom: rotate(0turn);
+        transform: rotate(0turn);
     }
     to {
         transform: rotate(1turn);
