--- a/randomimage/style.scss
+++ b/randomimage/style.scss
@@ -5,7 +5,7 @@
     display: grid;
     place-items: center;
     padding: 60px;
-    background: url(https://picsum.photos/800 ) no-repeat;
+    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,.3)),url(https://picsum.photos/800 ) no-repeat;
     background-size: cover;
     background-position: center;
 }
